--- a/form.html
+++ b/form.html
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-<video id="myvideo" src="C:\Users\adith\Downloads\clouds.mp4" autoplay muted loop plays-inline></video>
+<!--<video id="myvideo" src="C:\Users\adith\Downloads\clouds.mp4" autoplay muted loop plays-inline></video>-->
     
         
         <form action="file:///C:/Users/adith/OneDrive/Documents/HTML/OTT%20HOUSE/a1.html">
