--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
         <li><a href="#about">About</a></li>
         <li id="login"><a href="file:///C:/Users/adith/OneDrive/Documents/HTML/OTT%20HOUSE/form.html">Log In </a></li>
     </ul>
-    <video id="myvideo" src="C:\Users\adith\Downloads\clouds.mp4" autoplay muted loop plays-inline></video>
+   <!-- <video id="myvideo" src="C:\Users\adith\Downloads\clouds.mp4" autoplay muted loop plays-inline></video>-->
 
 </body>
 </html>>
